Fixed path issues and added Mission to portfolio.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
     <header>
         <h1>Kole S. Bauer: WDD 131 Portfolio</h1>
     </header>
+    <h1>
+        Welcome to WDD-131 Web Projects
+    </h1>
+
+    <nav>
+    <a href="W01/Mission/index.html">BYUI Mission Statement</a>
+    </nav>
+
     <main>
-        <!-- Main content goes here -->
+        
     </main>
     <footer>
-        <!-- Footer content goes here -->
         &copy; 2024 Kole S. Bauer
     </footer>
 </body>
