Completed W02 Mission part 2 assignment by adding a dark mode selector and corresponding style + mission.js.

--- a/W01/Mission/index.html
+++ b/W01/Mission/index.html
@@ -56,10 +56,15 @@
         </main>
 
         <footer>
-            <img src="byui-logo_blue.webp">
+            <img id="logo" src="byui-logo_blue.webp">
         </footer>
 
-    </div> 
-</body>
+        <select id="themeSelector">
+            <option value="light">Light Mode</option>
+            <option value="dark">Dark Mode</option>
+        </select>
+    </div>
 
+    <script src="mission.js" defer></script>
+</body>
 </html>
