Began work on the W03 "Cool Pics" assignment by setting up an index.html for the project and importing pictures. Changed home page html to link to Cool Pics project.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <nav>
     <a href="W01/Mission/index.html">BYUI Mission Statement</a>
+    <a href="WDD-131/W03-04/coolpics/index.html">Coolpics</a>
     </nav>
 
     <main>
