--- a/W03-W04/coolpics/index.html
+++ b/W03-W04/coolpics/index.html
@@ -3,34 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./coolpics.css">
-    <script src="coolpics.js" defer></script>
+    <meta name="description" content="A photography gallery showcasing cool pictures.">
+    <meta name="author" content="Your Name">
+    <title>Cool Pics 📷</title>
+    <link rel="stylesheet" href="coolpics.css">
 </head>
 <body>
-
     <header>
-        <title>
-            "Cool Pics 📷"
-        </title>
+        <h1 class="title">Cool Pics 📷</h1>
+        <button id="menu-button">Menu</button>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">People</a></li>
+                <li><a href="#">Places</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <main>
-
-        <section>
-            <class="gallery"> 
-                <figure>  
-                    <img src="norris-sm.jpeg" alt="picture">
-                </figure>
-            </class>
-        </section>
-
-    </main>
     
+    <main>
+        <h2>Photos of the Day</h2>
+        <section class="gallery">
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="Cool Pic 1">
+            </figure>
+        </section>
+    </main>
     <footer>
-        "©2023 Not a real site 😀"
+        <p>©2024 Not a real site 😀</p>
     </footer>
-
 </body>
-
 </html>
