Fixed path error (hopefully.)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     </h1>
 
     <nav>
-    <a href="W01/Mission/index.html">BYUI Mission Statement</a>
-    <a href="WDD-131/W03-04/coolpics/index.html">Coolpics</a>
+        <ul>
+            <li>
+                <a href="W01/Mission/index.html">BYUI Mission Statement</a>
+                <a href="W03-04/coolpics/index.html">CoolPics</a>
+            </li>
+        </ul>
+
     </nav>
 
     <main>
