Fixed path issue: part 2.

--- a/Unit2/coolpics/index.html
+++ b/Unit2/coolpics/index.html
@@ -14,7 +14,7 @@
         <button id="menu-button">Menu</button>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://ksb-byui.github.io/WDD-131/">Home</a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Places</a></li>
                 <li><a href="#">About</a></li>
