--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <ul>
             <li>
                 <a href="W01/Mission/index.html">BYUI Mission Statement</a>
-                <a href="W03-04/coolpics/index.html">CoolPics</a>
+            </li>
+            <li>
+                <a href="Unit2/coolpics/index.html">CoolPics</a>
             </li>
         </ul>
 
