More path problems.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="W01/Mission/index.html">BYUI Mission Statement</a>
             </li>
             <li>
-                <a href="Unit2/coolpics/index.html">CoolPics</a>
+                <a href="WDD-131/Unit2/coolpics/index.html">CoolPics</a>
             </li>
         </ul>
 
