Added link to blog site on portfolio.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <li>
                 <a href="W03/index.html">CoolPics</a>
             </li>
+            <li>
+                <a href="W05/Blog/index.html">Blog</a>
+            </li>
         </ul>
 
     </nav>
