--- a/W03/index.html
+++ b/W03/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Kole Bauer">
     <title>Cool Pics 📷</title>
     <link rel="stylesheet" href="coolpics.css">
+    <script src="coolpics.js" defer></script>
 </head>
 <body>
     <div class="viewer hide">
@@ -63,6 +64,6 @@
     <footer>
         <p>©2024 Not a real site 😀</p>
     </footer>
-    <script src="coolpics.js"></script>
+    
 </body>
 </html>
