Added link to CC form.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="W05/Blog/index.html">Blog</a>
             </li>
+            <li>
+                <a href="W06/index.html">CC Form</a>
+            </li>
         </ul>
 
     </nav>
