--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="W06/index.html">CC Form</a>
             </li>
+            <li>
+                <a href="W07/index.html">Registration</a>
+            </li>
         </ul>
 
     </nav>
