Linked recipe book to main index.html.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li>
                 <a href="W07/index.html">Registration</a>
             </li>
+            <li>
+                <a href="W09/index.html">Recipe Book</a>
+            </li>
         </ul>
 
     </nav>
