Linked final project to home page.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <a href="W09/index.html">Recipe Book</a>
             </li>
             <li>
-                <a href="W11/SitePlan/siteplan.html">Final Site Plan</a>
+                <a href="W11-13/SitePlan/siteplan.html">Final Site Plan</a>
+            </li>
+            <li>
+                <a href="W11-13/kbportfolio/index.html">Final Site Project</a>
             </li>
         </ul>
 
