Polishing and fixing.

--- a/W11-13/kbportfolio/contact.html
+++ b/W11-13/kbportfolio/contact.html
@@ -6,7 +6,8 @@
     <title>Kole S. Bauer - Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/contact.css">
-    <script src="scripts/scripts.js" defer></script>
+    <script src="scripts/contact.js" defer></script>
+
 </head>
 <body>
 
