--- a/W11-13/kbportfolio/index.html
+++ b/W11-13/kbportfolio/index.html
@@ -6,7 +6,7 @@
     <title>Kole S. Bauer - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/scripts.js" defer></script>
+    <script src="scripts/greeting.js" defer></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
             </div>
             <img id="backg" src="images/portBack.png" alt="Home Background">
             <div class="p-container">
-                <p id="greeting"></p>
+                <div id="greeting"></div>
                 <p>My name is Kole Bauer and I'm currently in my Junior year at Brigham Young University - Idaho, working toward a bachelor's degree in computer science with a minor in data science and an emphasis in machine learning. I have a passion for mathematics and currently participate in the Data Science Society. In my studies, I am learning and implementing skills in artificial intelligence, machine learning, and big data. Feel free to explore the different pages on my website to get to know me a bit better!</p>
             </div>
         </section>
@@ -66,5 +66,6 @@
         <a href="./contact.html" class="inquiry-btn">Inquiries</a>
         <a href="https://ksb-byui.github.io/WDD-131/W11-13/SitePlan/siteplan.html" class="site-plan-btn">Site Plan</a>
     </footer>
+
 </body>
 </html>
